--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
   align-items: center;
 }
 
+a{
+  border: 4px solid #ff2;
+  background-color: rgb(201, 70, 19);
+}
+
 main {
   display: grid;
   width: 30%;
